# riv

./: .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
src/: cli.rs  infobar.rs  lib.rs  main.rs  paths.rs  program.rs  screen.rs  sort.rs  ui.rs
src/program/: command_mode.rs  mod.rs  render.rs
