[package]
name = "riv"
version = "0.3.0"
authors = ["davejkane", "gurgalex", "nickhackman"]
edition = "2018"

[dependencies]
clap = "2.33"
glob = "0.3"
fs_extra = "1.1"
natord = "1.0.9"
shellexpand = "1.0"
lazy_static = "1.3.0"
regex = "1"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image", "ttf"]
